Base structure for the playground. Setting up the base file structure for the playgrond with the template files to be filled out.

--- a/main.yaml
+++ b/main.yaml
@@ -7,3 +7,20 @@
   roles:
     - install-packages
     - create-user
+
+- name: Consul base
+  hosts: all
+  roles:
+    - consul-common
+    - consul-server
+    - consul-client
+
+- name: Consul internal networking encryption
+  hosts: all
+  roles: 
+    - consul-tls
+
+- name: Consul health checks
+  hosts: all
+  roles:
+    - consul-health-checks
