--- a/main.yaml
+++ b/main.yaml
@@ -2,6 +2,7 @@
 
 - name: Consul base
   hosts: all
+  become: true
   roles:
     - base
     - consul-common
@@ -10,10 +11,12 @@
 
 - name: Consul internal networking encryption
   hosts: all
+  become: true
   roles: 
     - consul-tls
 
 - name: Consul health checks
   hosts: all
+  become: true
   roles:
     - consul-health-checks
