--- a/roles/consul-common/tasks/main.yaml
+++ b/roles/consul-common/tasks/main.yaml
@@ -61,7 +61,7 @@
 - name     : Create common consul config file
   template :
     src  : common-config.hcl.j2
-    dest : /etc/consul.d/common-config.hcl
+    dest : "{{ consul_config_dir }}common-config.hcl"
   notify   : Restart consul service
 
 - name     : Create consul service file
