--- a/roles/consul-server/tasks/main.yaml
+++ b/roles/consul-server/tasks/main.yaml
@@ -3,6 +3,6 @@
 - name: Set up server config file
   template:
     src: server-config.hcl.j2
-    dest: "{{ consul_cofig_dir }}/server-config.hcl"
+    dest: "{{ consul_config_dir }}/server-config.hcl"
   notify: Restart Consul
   
