--- a/roles/consul-common/tasks/main.yaml
+++ b/roles/consul-common/tasks/main.yaml
@@ -31,6 +31,7 @@
     - "{{ consul_config_dir }}"
     - /opt/consul
     - /opt/consul/data
+    - "{{ consul_tls_dir }}"
 
 - name     : Check for encryption key
   stat     :
