--- a/roles/consul-client/tasks/main.yaml
+++ b/roles/consul-client/tasks/main.yaml
@@ -3,5 +3,5 @@
 - name     : Set up client config file
   template :
     src  : client-config.hcl.j2
-    dest : /etc/consul.d/client-config.hcl
+    dest : "{{ consul_cofig_dir }}/client-config.hcl"
   notify   : Restart Consul client
