moving user vars

--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -1,6 +1,8 @@
 consul_base_path        : "/opt/consul.d"
 consul_config_dir       : "{{ consul_base_path }}/config"
+consul_group            : "{{ consul_user }}"
 consul_install_location : /usr/local/bin
 consul_tls_dir          : "{{ consul_base_path }}/tls"
+consul_user             : consul
 encryption_key_file     : "{{ consul_base_path }}/keyfile.txt"
 hashicorp_registry_url  : "https://releases.hashicorp.com"
