--- a/main.yaml
+++ b/main.yaml
@@ -6,7 +6,17 @@
   roles:
     - base
     - consul-common
+
+- name: Set up servers
+  hosts: consul_servers
+  become: true
+  roles:
     - consul-server
+
+- name : set up clients
+  hosts : consul_clients
+  become : true
+  roles : 
     - consul-client
 
 - name: Consul internal networking encryption
