--- a/roles/consul-common/tasks/main.yaml
+++ b/roles/consul-common/tasks/main.yaml
@@ -59,6 +59,9 @@
   when     : ("consul_servers" in group_names)
   run_once : true
 
+- name : debug encryption key
+  var : consul_encryption_key
+
 - name     : Create common consul config file
   template :
     src  : common-config.hcl.j2
