Consistant Handler names

--- a/roles/consul-server/tasks/main.yaml
+++ b/roles/consul-server/tasks/main.yaml
@@ -4,5 +4,5 @@
   template:
     src: server-config.hcl.j2
     dest: "{{ consul_config_dir }}/server-config.hcl"
-  notify: Restart Consul
+  notify: Restart consul service
   
