--- a/inventory/main.yaml
+++ b/inventory/main.yaml
@@ -1,6 +1,8 @@
 ---
 
 all:
+  vars:
+    ansible_host_key_checking: false
   children:
     consul_servers:
       vars:
@@ -12,5 +14,7 @@ all:
     consul_clients:
       vars: 
         ansible_user: playground
+        ansible_ssh_pass  : # Add server password
+        ansible_sudo_pass : # Add server password
       hosts:
-        127.0.0.1
+        # Add the host instance IP
